--- a/foodaddonn_BP/items/applpai.json
+++ b/foodaddonn_BP/items/applpai.json
@@ -24,8 +24,7 @@
     "minecraft:food":{
       "can_always_eat": false,
       "nutrition" : 8,
-      "saturation_modifier": 0.8,
-      "using_converts_to": ""
+      "saturation_modifier": 0.8
     }
     }
   }
