--- a/foodaddonn_BP/recipes/applpai.json
+++ b/foodaddonn_BP/recipes/applpai.json
@@ -8,9 +8,9 @@
         "assume_symmetry": false,
         "priority": 1,
         "pattern": [
-            "s",
-            "aa",
-            "e"
+            " s ",
+            "aaa",
+            " e "
         ],
         "key": {
             "a": {
