--- a/foodaddonn_BP/items/applpai.json
+++ b/foodaddonn_BP/items/applpai.json
@@ -3,11 +3,13 @@
   "format_version": "1.21.80",
   "minecraft:item": {
     "description": {
-      "identifier": "mc:applpai",
-      "menu_category":{
-        "group":"itemGroup.name.cookedFood",
-        "category":"items"
-      }
+      "identifier": "mc:applpai"
+      },
+        "menu_category": {
+    "category": "items",
+    "group": "itemGroup.name.food"
+  }
+
     },
     "components": {
     "minecraft:max_stack_size":64,
@@ -28,4 +30,3 @@
     }
     }
   }
-}
