--- a/foodaddonn_BP/items/applpai.json
+++ b/foodaddonn_BP/items/applpai.json
@@ -3,7 +3,7 @@
   "format_version": "1.21.10",
   "minecraft:item": {
     "description": {
-      "identifier": "food:applpai",
+      "identifier": "mc:applpai",
       "menu_category":{
         "group":"itemGroup.name.miscFood",
         "category":"items"
