--- a/items/applpai.json
+++ b/items/applpai.json
@@ -4,8 +4,8 @@
     "description": {
       "identifier": "mc:applpai",
       "menu_category":{
-        "group":"itemGroup.name.miscFood",
-        "category":"items"
+        "category": "items",
+        "group": "itemGroup.name.cooking"
       }
     },
     "components": {
