--- a/recipes/appl_pie.json
+++ b/recipes/appl_pie.json
@@ -25,7 +25,7 @@
         },
         "unlock": [
             {
-                "context": "AlwaysUnlocked"
+                "context": "always"
             }
         ],
         "result": {
