--- a/items/appl_pie.json
+++ b/items/appl_pie.json
@@ -4,8 +4,7 @@
     "description": {
       "identifier": "mc:appl_pie",
       "menu_category":{
-        "category": "items",
-        "group": "itemGroup.name.cooking"
+        "category": "items"
       }
     },
     "components": {
